--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	    		<img src="" class="cards__item__icon" />
 	    		<ul class="cards__footer">
 	    			<li class="cards__date">04/02/2015</li>
-	    			<li class="cards__temp">19°</li>
+	    			<li class="cards__temp" data-temp="°C">19</li>
 	    			<li><span class="cards__mintemp">12°</span> | <span class="cards_maxtemp">25°</span></li>
 	    			<li class="cards__weatherdescription">Templado</li>
 	    		</ul>
@@ -24,7 +24,7 @@
 	    		<img src="" class="cards__item__icon" />
 	    		<ul class="cards__footer">
 	    			<li class="cards__date">04/02/2015</li>
-	    			<li class="cards__temp">19°</li>
+	    			<li class="cards__temp" data-temp="°C">19</li>
 	    			<li><span class="cards__mintemp">12°</span> | <span class="cards_maxtemp">25°</span></li>
 	    			<li class="cards__weatherdescription">Templado</li>
 	    		</ul>
@@ -35,7 +35,7 @@
 	    		<img src="" class="cards__item__icon" />
 	    		<ul class="cards__footer">
 	    			<li class="cards__date">04/02/2015</li>
-	    			<li class="cards__temp">19°</li>
+	    			<li class="cards__temp" data-temp="°C">19</li>
 	    			<li><span class="cards__mintemp">12°</span> | <span class="cards_maxtemp">25°</span></li>
 	    			<li class="cards__weatherdescription">Templado</li>
 	    		</ul>
