--- a/index.html
+++ b/index.html
@@ -1,45 +1,41 @@
 <!DOCTYPE html>
-<html lang="es">
-    <head>
-        <meta charset="utf-8"/>
-        <title>Time Weather</title>
-        <link rel="stylesheet" type="text/css" href="css/estilos.css">
-    </head>
-    <body>
-    	<section class="cards">
-	    	<article class="cards__item">
-	    		<h3 class="cards__item__header">Manizales</h3>
-	    		<date class="cards__item__date">04/02/2015</date>
-	    		<img src="" class="cards__item__icon" />
-	    		<ul class="cards__footer">
-	    			<li class="cards__date">04/02/2015</li>
-	    			<li class="cards__temp" data-temp="°C">19</li>
-	    			<li><span class="cards__mintemp">12°</span> | <span class="cards_maxtemp">25°</span></li>
-	    			<li class="cards__weatherdescription">Templado</li>
-	    		</ul>
-	    	</article>
-	    	<article class="cards__item">
-	    		<h3 class="cards__item__header">Manizales</h3>
-	    		<date class="cards__item__date">04/02/2015</date>
-	    		<img src="" class="cards__item__icon" />
-	    		<ul class="cards__footer">
-	    			<li class="cards__date">04/02/2015</li>
-	    			<li class="cards__temp" data-temp="°C">19</li>
-	    			<li><span class="cards__mintemp">12°</span> | <span class="cards_maxtemp">25°</span></li>
-	    			<li class="cards__weatherdescription">Templado</li>
-	    		</ul>
-	    	</article>
-	    	<article class="cards__item">
-	    		<h3 class="cards__item__header">Manizales</h3>
-	    		<date class="cards__item__date">04/02/2015</date>
-	    		<img src="" class="cards__item__icon" />
-	    		<ul class="cards__footer">
-	    			<li class="cards__date">04/02/2015</li>
-	    			<li class="cards__temp" data-temp="°C">19</li>
-	    			<li><span class="cards__mintemp">12°</span> | <span class="cards_maxtemp">25°</span></li>
-	    			<li class="cards__weatherdescription">Templado</li>
-	    		</ul>
-	    	</article>
-    	</section>
-    </body>
-</html>	
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>PlatziWeather</title>
+<link rel="stylesheet" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Ovo|Megrim' rel='stylesheet' type='text/css'>
+</head>
+<body>
+<header class="main-header">
+<h1>PlatziWeather</h1>
+<h2>An awesome way to see how we burn by global warming</h2>
+</header>
+<main class="cards-group">
+<div class="card card--valencia">
+<header class="card__header">
+<h3 class="card__title">Valencia</h3>
+<h4 class="card__date">07:39 am</h4>
+</header>
+<div class="card__info">
+<img src="http://openweathermap.org/img/w/02d.png" alt="" class="card__image">
+<span class="card__maxt">18º</span>
+<span class="card__mint">11º</span>
+<span class="card__temp">13º</span>
+</div>
+</div>
+<div class="card card--valencia card--mv" data-city="mv">
+<header class="card__header">
+<h3 class="card__title">Mountain View</h3>
+<h4 class="card__date">07:39 am</h4>
+</header>
+<div class="card__info">
+<img src="http://openweathermap.org/img/w/02d.png" alt="" class="card__image">
+<span class="card__maxt">18º</span>
+<span class="card__mint">11º</span>
+<span class="card__temp">13º</span>
+</div>
+</div>
+</main>
+</body>
+</html>
