--- a/index.html
+++ b/index.html
@@ -1,41 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>PlatziWeather</title>
-<link rel="stylesheet" href="style.css">
-<link href='http://fonts.googleapis.com/css?family=Ovo|Megrim' rel='stylesheet' type='text/css'>
-</head>
-<body>
-<header class="main-header">
-<h1>PlatziWeather</h1>
-<h2>An awesome way to see how we burn by global warming</h2>
-</header>
-<main class="cards-group">
-<div class="card card--valencia">
-<header class="card__header">
-<h3 class="card__title">Valencia</h3>
-<h4 class="card__date">07:39 am</h4>
-</header>
-<div class="card__info">
-<img src="http://openweathermap.org/img/w/02d.png" alt="" class="card__image">
-<span class="card__maxt">18º</span>
-<span class="card__mint">11º</span>
-<span class="card__temp">13º</span>
-</div>
-</div>
-<div class="card card--valencia card--mv" data-city="mv">
-<header class="card__header">
-<h3 class="card__title">Mountain View</h3>
-<h4 class="card__date">07:39 am</h4>
-</header>
-<div class="card__info">
-<img src="http://openweathermap.org/img/w/02d.png" alt="" class="card__image">
-<span class="card__maxt">18º</span>
-<span class="card__mint">11º</span>
-<span class="card__temp">13º</span>
-</div>
-</div>
-</main>
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>PlatziWeather</title>
+		<link rel="stylesheet" href="css/estilos-weather.css">
+		<link href='http://fonts.googleapis.com/css?family=Ovo|Megrim' rel='stylesheet' type='text/css'>
+	</head>
+	<body>
+		<header class="main-header">
+		<h1>Platzi Weather</h1>
+		<h2>An awesome way to see how we burn by global warming</h2>
+		</header>
+		<main class="cards-group">
+			<template id="template--city">
+				<div class="card">
+					<header class="card__header">
+						<h3 class="card__title"></h3>
+						<h4 class="card__date"></h4>
+					</header>
+					<div class="card__info">
+						<img src="http://openweathermap.org/img/w/02d.png" alt="" class="card__image">
+						<span class="card__maxt"></span>
+						<span class="card__mint"></span>
+						<span class="card__temp"></span>
+					</div>
+				</div>
+			</template>
+		</main>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+	<script src="js/app.js"></script>	
+	</body>
 </html>
