--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
 		<h1>Platzi Weather</h1>
 		<h2>An awesome way to see how we burn by global warming</h2>
 		</header>
+		<div class="loader">Geolocalizando, por favor espere....</div>
 		<main class="cards-group">
 			<template id="template--city">
 				<div class="card">
 					<header class="card__header">
-						<h3 class="card__title"></h3>
-						<h4 class="card__date"></h4>
+						<h3 data-city class="card__title"></h3>
+						<h4 data-time class="card__date"></h4>
 					</header>
 					<div class="card__info">
-						<img src="http://openweathermap.org/img/w/02d.png" alt="" class="card__image">
-						<span class="card__maxt"></span>
-						<span class="card__mint"></span>
-						<span class="card__temp"></span>
+						<img data-icon src="" alt="" class="card__image">
+						<span data-temp="max"class="card__maxt"></span>
+						<span data-temp="min"class="card__mint"></span>
+						<span data-temp="current"class="card__temp"></span>
 					</div>
 				</div>
 			</template>
